Fixed New Messages and Jump to Present bar overlapping the scrollbar.

--- a/css/main.css
+++ b/css/main.css
@@ -657,7 +657,7 @@
 .chat .jump-to-present-bar {
 	background-color: #4687d6 !important;
 	left: 0;
-	right: 0;
+	right: 16px;
 	border-radius: 0;
 	padding-left: 11px;
 	padding-top: 5px;
